scaffold Products controller

--- a/StorageApi/appsettings.json
+++ b/StorageApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StorageApiContext": "Server=(localdb)\\mssqllocaldb;Database=StorageApiContext-1389489f-20f2-4898-8952-d60f9cf34c8e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
