--- a/StorageApi/Properties/launchSettings.json
+++ b/StorageApi/Properties/launchSettings.json
@@ -13,6 +13,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
+      "launchUrl": "swagger",
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7239;http://localhost:5065",
       "environmentVariables": {
