replace mssql server with sql lite to work on mac

--- a/StorageApi/appsettings.json
+++ b/StorageApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StorageApiContext": "Server=(localdb)\\mssqllocaldb;Database=StorageApiContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "StorageApiContext": "Data Source=Storage.db"
   }
 }
